# flood-risk-management-backend

./: .env.example  main.py  pyproject.toml  requirements.txt
core/: ml_model.py  processor.py
data/: flood_model.joblib  year2.csv
data/krishna_river_basin/: year1.csv
